--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="assets/css/base/base.css">
   <link rel="stylesheet" href="assets/css/componentes/botoes.css">
+  <link rel="stylesheet" href="assets/css/componentes/input.css">
   <title>Casa Verde</title>
 </head>
 
@@ -19,7 +20,10 @@
   <main class="container">
     <button class="botao">Assinar Newslatter</button>
 
+    <input type="email" class="input input--icone input--email" placeholder="Insira seu e-mail" aria-label="Insira seu e-mail">
+
     <button class="botao botao--alternativo">Botao Alternativo</button>
+
   </main>
 
 </body>
