--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="assets/css/base/base.css">
   <link rel="stylesheet" href="assets/css/componentes/botoes.css">
   <link rel="stylesheet" href="assets/css/componentes/input.css">
+  <link rel="stylesheet" href="assets/css/componentes/cartao.css">
   <title>Casa Verde</title>
 </head>
 
@@ -23,6 +24,10 @@
     <input type="email" class="input input--icone input--email" placeholder="Insira seu e-mail" aria-label="Insira seu e-mail">
 
     <button class="botao botao--alternativo">Botao Alternativo</button>
+
+    <article class="cartao">
+      <button class="botao">Um botão</button>
+    </article>
 
   </main>
 
