create component title

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <main class="container">
+  <main class="container ">
     <button class="botao">Assinar Newslatter</button>
 
     <input type="email" class="input input--icone input--email" placeholder="Insira seu e-mail" aria-label="Insira seu e-mail">
@@ -26,7 +26,9 @@
     <button class="botao botao--alternativo">Botao Alternativo</button>
 
     <article class="cartao">
-      <button class="botao">Um botão</button>
+      <h2 class="titulo alinhamento--meio">Como conseguir
+        <span class="titulo--destaque">minha planta</span>
+      </h2>
     </article>
 
   </main>
