--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/css/componentes/cartao.css">
   <link rel="stylesheet" href="assets/css/componentes/item.css">
   <link rel="stylesheet" href="assets/css/componentes/produto.css">
+  <link rel="stylesheet" href="assets/css/componentes/video.css">
   <title>Casa Verde</title>
 </head>
 
@@ -55,6 +56,12 @@
         <p class="produto__preco">R$ 20,00</p>
         <a href="#" class="produto__comprar">Comprar<span class="produto__comprar--icone"></span></a>
       </div>
+    </article>
+
+    <article class="cartao-video">
+      <div class="cartao-video__video"><img src="https://picsum.photos/278/252" alt="Banner do vídeo"></div>
+      <h3 class="cartao-video__titulo">Video XYZ</h3>
+      <p>Puvlicado em março de 2019</p>
     </article>
 
   </main>
