--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@900&family=Montserrat:wght@400;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="assets/css/base/base.css">
+  <link rel="stylesheet" href="assets/css/componentes/cabecalho.css">
   <link rel="stylesheet" href="assets/css/componentes/botoes.css">
   <link rel="stylesheet" href="assets/css/componentes/input.css">
   <link rel="stylesheet" href="assets/css/componentes/cartao.css">
@@ -21,7 +22,14 @@
 </head>
 
 <body>
-  <main class="container ">
+  <header class="container cabecalho">
+    <img src="assets/img/logo.svg" alt="Logo da Casa Verde" class="cabecalho__logo">
+    <a href="#" aria-label="Meu carrinho">
+      <img src="assets/img/icones/carrinho-amarelo.svg" alt="Ícone carrinho" class="cabecalho__carrinho">
+    </a>
+  </header>
+
+  <main class="container">
     <button class="botao">Assinar Newslatter</button>
 
     <input type="email" class="input input--icone input--email" placeholder="Insira seu e-mail" aria-label="Insira seu e-mail">
