--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="assets/css/componentes/item.css">
   <link rel="stylesheet" href="assets/css/componentes/produto.css">
   <link rel="stylesheet" href="assets/css/componentes/video.css">
+  <link rel="stylesheet" href="assets/css/componentes/rodape.css">
   <title>Casa Verde</title>
 </head>
 
@@ -73,6 +74,39 @@
     </article>
 
   </main>
+
+  <footer class="container rodape">
+    <img src="assets/img/logo.svg" alt="Logo Casa Verde" class="rodape__logo">
+    <ul class="rodape__social">
+      <li>
+        <a href="#" class="rodape__social-midia">
+          <img src="assets/img/icones/facebook.svg" alt="Ícone Facebook">
+        </a>
+      </li>
+      <li>
+        <a href="#" class="rodape__social-midia">
+          <img src="assets/img/icones/twitter.svg" alt="Ícone Twitter">
+        </a>
+      </li>
+      <li><a href="#" class="rodape__social-midia">
+        <img src="assets/img/icones/instagram.svg" alt="Ícone Instagram">
+      </a>
+      </li>
+    </ul>
+
+    <address class="rodape__unidade texto">
+      <span class="rodape__unidade-titulo">Rio de Janeiro</span>
+      Rua Siqueira Campos, 171, 303 <br>
+      Copacabana <br>
+      Telefone: (21) 99876-0099 
+    </address>
+    <address class="rodape__unidade texto">
+      <span class="rodape__unidade-titulo">São Paulo</span>
+      Rua Anita Garibaldi, 33, 13 <br>
+      Sé <br>4a
+      Telefone: (11) 99875-2201
+    </address>
+  </footer>
 
 </body>
 
