--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     rel="stylesheet">
   <link rel="stylesheet" href="assets/css/base/base.css">
   <link rel="stylesheet" href="assets/css/componentes/cabecalho.css">
+  <link rel="stylesheet" href="assets/css/componentes/input.css">
+  <link rel="stylesheet" href="assets/css/componentes/botoes.css">
+  <link rel="stylesheet" href="assets/css/chamada.css">
+  <link rel="stylesheet" href="assets/css/componentes/cartao.css">
+  <link rel="stylesheet" href="assets/css/componentes/item.css">
+  <link rel="stylesheet" href="assets/css/como-conseguir.css">
+  <link rel="stylesheet" href="assets/css/componentes/produto.css">
+  <link rel="stylesheet" href="assets/css/ofertas.css">
+  <link rel="stylesheet" href="assets/css/componentes/video.css">
   <link rel="stylesheet" href="assets/css/componentes/rodape.css">
 </head>
 
@@ -24,41 +33,163 @@
       <img src="assets/img/icones/carrinho-amarelo.svg" alt="Ícone do Carrinho" class="cabecalho__carrinho">
     </a>
   </header>
+
+  <main>
+    <!-- Chamada -->
+    <section class="container chamada">
+      <h2 class="titulo">Sua casa com as <span class="titulo--destaque">melhores plantas</span></h2>
+      <p class="texto chamada__texto">Encontre aqui uma vasta seleção de plantas para decorar a sua casa e torná-lo uma pessoa mais feliz no seu dia a dia. Entre com seu e-mail e assine nossa newsletter para saber das novidades da marca</p>
+      <img src="assets/img/planta-chamada.png" alt="Foto do produto" class="chamada__imagem">
+      <form action="#" class="chamada__formulario">
+        <input type="email" class="input input--email input--icone" placeholder="Insira seu email" aria-label="Insira seu email">
+        <button class="botao">Assinar newsletter</button>
+      </form>
+    </section>
+
+    <!-- Como conseguir -->
+    <section class="container como-conseguir">
+      <article class="cartao">
+        <h2 class="titulo alinhamento--meio">Como conseguir
+          <span class="titulo--destaque">minha planta</span>
+        </h2>
+  
+        <ul class="lista-item">
+          <li class="item">
+            <span class="item__icone item__icone--cursor"></span>
+            <p>Escolha suas plantas</p>
+          </li>
+          <li class="item">
+            <span class="item__icone item__icone--cart"></span>
+            <p>Faça seu pedido</p>
+          </li>
+          <li class="item">
+            <span class="item__icone item__icone--caminhao"></span>
+            <p>Aguarde na sua casa</p>
+          </li>
+        </ul>
+      </article>
+    </section>
+
+    <!-- Produtos -->
+    <section class="container ofertas">
+      <h2 class="titulo alinhamento--meio">Conheça nossos <span class="titulo--destaque">produtos</span></h2>
+      <ul>
+        <li class="produto">
+          <img src="assets/img/produto-01.png" alt="Foto do produto" class="produto__imagem">
+          <div class="produto__conteudo">
+            <h3 class="produto__titulo titulo--destaque">Ajuga reptans</h3>
+            <p class="produto__preco">R4 20,00</p>
+            <a href="" class="produto__comprar">Comprar <span class="produto__comprar--icone"></span></a>
+          </div>
+        </li>
+        <li class="produto">
+          <img src="assets/img/produto-02.png" alt="Foto do produto" class="produto__imagem">
+          <div class="produto__conteudo">
+            <h3 class="produto__titulo titulo--destaque">Cordyline fruticosa</h3>
+            <p class="produto__preco">R4 20,00</p>
+            <a href="" class="produto__comprar">Comprar <span class="produto__comprar--icone"></span></a>
+          </div>
+        </li>
+        <li class="produto">
+          <img src="assets/img/produto-03.png" alt="Foto do produto" class="produto__imagem">
+          <div class="produto__conteudo">
+            <h3 class="produto__titulo titulo--destaque">Crassula ovata</h3>
+            <p class="produto__preco">R4 20,00</p>
+            <a href="" class="produto__comprar">Comprar <span class="produto__comprar--icone"></span></a>
+          </div>
+        </li>
+        <li class="produto">
+          <img src="assets/img/produto-04.png" alt="Foto do produto" class="produto__imagem">
+          <div class="produto__conteudo">
+            <h3 class="produto__titulo titulo--destaque">Cyperus rotundus</h3>
+            <p class="produto__preco">R4 20,00</p>
+            <a href="" class="produto__comprar">Comprar <span class="produto__comprar--icone"></span></a>
+          </div>
+        </li>
+        <li class="produto">
+          <img src="assets/img/produto-05.png" alt="Foto do produto" class="produto__imagem">
+          <div class="produto__conteudo">
+            <h3 class="produto__titulo titulo--destaque">Delairea odorata</h3>
+            <p class="produto__preco">R4 20,00</p>
+            <a href="" class="produto__comprar">Comprar <span class="produto__comprar--icone"></span></a>
+          </div>
+        </li>
+        <li class="produto">
+          <img src="assets/img/produto-06.png" alt="Foto do produto" class="produto__imagem">
+          <div class="produto__conteudo">
+            <h3 class="produto__titulo titulo--destaque">Datura metel</h3>
+            <p class="produto__preco">R4 20,00</p>
+            <a href="" class="produto__comprar">Comprar <span class="produto__comprar--icone"></span></a>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Videos -->
+    <section class="container">
+      <h2 class="titulo alinhamento--meio">Veja aqui nossos <span class="titulo--destaque">vídeos</span></h2>
+
+      <ul>
+        <li class="cartao-video container">
+          <div class="cartao-video__video"><img src="https://loremflickr.com/278/252/plants/?random=1" alt="Thumb do vídeo"></div>
+          <h3 class="cartao-video__titulo">Vídeo XYZ</h3>
+          <p>Publicado em março de 2019</p>
+        </li>
+        <li class="cartao-video container">
+          <div class="cartao-video__video"><img src="https://loremflickr.com/278/252/plants/?random=2" alt="Thumb do vídeo"></div>
+          <h3 class="cartao-video__titulo">Vídeo XYZ</h3>
+          <p>Publicado em março de 2019</p>
+        </li>
+        <li class="cartao-video container">
+          <div class="cartao-video__video"><img src="https://loremflickr.com/278/252/plants/?random=3" alt="Thumb do vídeo"></div>
+          <h3 class="cartao-video__titulo">Vídeo XYZ</h3>
+          <p>Publicado em março de 2019</p>
+        </li>
+        <li class="cartao-video container">
+          <div class="cartao-video__video"><img src="https://loremflickr.com/278/252/plants/?random=4" alt="Thumb do vídeo"></div>
+          <h3 class="cartao-video__titulo">Vídeo XYZ</h3>
+          <p>Publicado em março de 2019</p>
+        </li>
+      </ul>
+
+    </section>
+  </main>
+
+  <!-- Rodapé -->
+  <footer class="container rodape">
+    <img src="assets/img/logo.svg" alt="Logo Casa Verde" class="rodape__logo">
+    <ul class="rodape__social">
+      <li>
+        <a href="#" class="rodape__social-midia">
+          <img src="assets/img/icones/facebook.svg" alt="Ícone Facebook">
+        </a>
+      </li>
+      <li>
+        <a href="#" class="rodape__social-midia">
+          <img src="assets/img/icones/twitter.svg" alt="Ícone Twitter">
+        </a>
+      </li>
+      <li><a href="#" class="rodape__social-midia">
+          <img src="assets/img/icones/instagram.svg" alt="Ícone Instagram">
+        </a>
+      </li>
+    </ul>
+  
+    <!-- Endereços -->
+    <address class="rodape__unidade texto">
+      <span class="rodape__unidade-titulo">Rio de Janeiro</span>
+      Rua Siqueira Campos, 171, 303 <br>
+      Copacabana <br>
+      Telefone: (21) 99876-0099
+    </address>
+    <address class="rodape__unidade texto">
+      <span class="rodape__unidade-titulo">São Paulo</span>
+      Rua Anita Garibaldi, 33, 13 <br>
+      Sé <br>
+      Telefone: (11) 99875-2201
+    </address>
+  
+  </footer>
 </body>
-<!-- Rodapé -->
-<footer class="container rodape">
-  <img src="assets/img/logo.svg" alt="Logo Casa Verde" class="rodape__logo">
-  <ul class="rodape__social">
-    <li>
-      <a href="#" class="rodape__social-midia">
-        <img src="assets/img/icones/facebook.svg" alt="Ícone Facebook">
-      </a>
-    </li>
-    <li>
-      <a href="#" class="rodape__social-midia">
-        <img src="assets/img/icones/twitter.svg" alt="Ícone Twitter">
-      </a>
-    </li>
-    <li><a href="#" class="rodape__social-midia">
-        <img src="assets/img/icones/instagram.svg" alt="Ícone Instagram">
-      </a>
-    </li>
-  </ul>
-
-  <!-- Endereços -->
-  <address class="rodape__unidade texto">
-    <span class="rodape__unidade-titulo">Rio de Janeiro</span>
-    Rua Siqueira Campos, 171, 303 <br>
-    Copacabana <br>
-    Telefone: (21) 99876-0099
-  </address>
-  <address class="rodape__unidade texto">
-    <span class="rodape__unidade-titulo">São Paulo</span>
-    Rua Anita Garibaldi, 33, 13 <br>
-    Sé <br>
-    Telefone: (11) 99875-2201
-  </address>
-
-</footer>
 
 </html>
